MusicDatabaseServer/kubernetes_cfg/musicdb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.musicdb.service: musicdb
  name: musicdb
spec:
  replicas: 1
  selector:
    matchLabels:
      io.musicdb.service: musicdb
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        io.musicdb.network/webnet: "true"
        io.musicdb.service: musicdb
    spec:
      containers:
      - args:
        - --default-authentication-plugin=mysql_native_password
        image: mysql:8.0.17
        name: musicdb
        ports:
        - containerPort: 3306
        resources: {}
        volumeMounts:
        - mountPath: /var/lib/mysql
          name: mysqldb
      restartPolicy: Always
      volumes:
      - name: mysqldb
        persistentVolumeClaim:
          claimName: mysqldb
status: {}
