MusicDatabaseServer/kubernetes_cfg/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.musicdb.service: web
  name: web
spec:
  replicas: 1
  selector:
    matchLabels:
      io.musicdb.service: web
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        io.musicdb.network/webnet: "true"
        io.musicdb.service: web
    spec:
      restartPolicy: Always
      containers:
      - env:
        - name: MUSICDB_CONFIG_FILE
          valueFrom:
            configMapKeyRef:
              key: MUSICDB_CONFIG_FILE
              name: web-musicdb-env
        - name: MYSQL_ROOT_PASSWORD
          valueFrom:
            secretKeyRef:
              name: dbrootpassword
              key: mysql-root-password 
        image: docker.io/godlessendeavor/musicdbserver
        name: web
        ports:
        - containerPort: 2020
        resources: {}
        volumeMounts:
        - mountPath: /app_config
          name: web-config-folder
      volumes:
      - name: web-config-folder
        hostPath:
          #type: Directory
          #remember to mount the host folder in minikube
          path: $MUSIC_DB_CONFIG_PATH
status: {}
