MusicDatabaseServer/kubernetes_cfg/musicdb-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.musicdb.service: musicdb
  name: musicdb
spec:
  ports:
  - name: "3306"
    port: 3306
    targetPort: 3306
  selector:
    io.musicdb.service: musicdb
status:
  loadBalancer: {}
