MusicDatabaseServer/kubernetes_cfg/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.musicdb.service: web
  name: web
spec:
  type: LoadBalancer
  ports:
  - name: "2020"
    port: 2020
  selector:
    io.musicdb.service: web
status:
  loadBalancer: {}
