MusicDatabaseServer/kubernetes_cfg/webnet-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: webnet
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          io.musicdb.network/webnet: "true"
  podSelector:
    matchLabels:
      io.musicdb.network/webnet: "true"
